# RepoConcu

./: .gitignore  .project  README.md
src/: .cproject  .project  Constants.h  Custom.cpp  Custom.h  CustomHandler.h  Dock.cpp  Dock.h  EventHandler.h  Generator.cpp  Generator.h  HumanResources.cpp  HumanResources.h  InfoHandler.h  InspectionHandler.h  Inspector.cpp  Inspector.h  InspectorHandler.h  LakeConcu.cpp  LakeConcu.h  LakeConcuContainer.cpp  LakeConcuContainer.h  Logger.cpp  Logger.h  Makefile  MemoriaCompartida.h  Queue.cpp  Queue.h  Queuer.cpp  Queuer.h  SIGINT_Handler.h  Semaforo.cpp  Semaforo.h  Ship.cpp  Ship.h  ShipContainer.cpp  ShipContainer.h  SignalHandler.cpp  SignalHandler.h  SignalSender.cpp  (+11 more)
src/examples/01.Procesos/: CMakeLists.txt  Dockerfile  ayuda_sobre_docker.txt  ejecutar_docker.sh  ejemplo5  ejemplo6  main2.cc  main3.cc  main4.cc  main5.cc  main6.cc
src/examples/03.Seniales/: CMakeCache.txt  Makefile  SIGINT_Handler.h  cmake_install.cmake  ejemplo1
src/examples/04.Pipes_y_fifos/: .cproject  .gitignore  .project
src/examples/05.Locks/: main3.cc
src/excercises/: lock  lock.c  sharedMem.c  signalBlocker1.c
src/parcial/: 2016-1  2016-1.c  2016-2.c  2016-3  2016-3.c  2016-4.c  2016-5.c  2017-1  2017-1.c  2017-2  2017-2.c  2017-3.c  2017-4  2017-4.c
src/tests/: LoggerTest.cpp  sharedmemtest.cpp  testQueue.cpp
